# meta-llica

./: .env.example  .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
.github/workflows/: push_to_hf.yml
baseline/: inference.py
docs/: ADDING_SCENARIOS.md  ARCHITECTURE.md  CONCEPTS.md  DEVELOPMENT.md
incident_response_env/: README.md  __init__.py  client.py  pyproject.toml
incident_response_env/baseline/: inference.py
incident_response_env/docs/: CONCEPTS.md  DEVELOPMENT.md
incident_response_env/scenarios/: medium_cascading.py
incident_response_env/server/: __init__.py  app.py  environment.py  grader.py  requirements.txt
incident_response_env/tests/: test_environment.py  test_scenarios.py
scenarios/: __init__.py  base.py  easy_crashed_service.py  hard_cascading.py  hard_intermittent.py  medium_intermittent.py
server/: app.py  environment.py  grader.py  reward.py
tests/: test_environment.py  test_grader.py  test_inference.py  test_scenarios.py
